# buspirate-uart-monitor

./: .gitignore  LICENSE  README.md  bp_monitor.py  setup.cfg
src/buspirate_uart_monitor/: bp_monitor.py
