[metadata]
name = buspirate-uart-monitor-danj
version = 0.0.1
author = Daniel Jackson
author_email = dan@djackson.org
description = Connect to a Bus Pirate, put it into UART mode compatible with esphome logger, and print everything received
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/e28eta/buspirate-uart-monitor
project_urls =
    Bug Tracker = https://github.com/e28eta/buspirate-uart-monitor/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Embedded Systems
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Diagnostic Device
    Topic :: Terminals :: Serial

[options]
install_requires =
    pyserial ~= 3.5
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    bp_monitor = buspirate_uart_monitor.bp_monitor:main

[options.packages.find]
where = src